nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-nginx
  labels:
    app: app-nginx
    version: v1
spec:
  containers:
  - name: nginx-1
    image: nginx
