hostname.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-deply
spec:
  selector:
    matchLabels:
      app: hostname
  template:
    metadata:
      labels:
        app: hostname
    spec:
      containers:
      - name: hostname-pod
        image: k8s.gcr.io/serve_hostname
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 9376
---
apiVersion: v1
kind: Service
metadata:
  name: hostname-svc
spec:
  type: ClusterIP
  selector:
    app: hostname
  ports:
  - port: 80
    targetPort: 9376
