ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: www.leo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: clusterip-svc
            port: 
              number: 80
